
* `adjusted_rand()` implements the adjusted Rand index.

* `dice()` implements the Dice similarity.

* `fowlkes_mallows()` implements the Folkes-Mallows index.

* `phi()` implements the Phi coefficient.

* `rogers_tanimoto()` implements the Rogers-Tanimoto similarity.

* `russel_rao()` implements the Russel-Rao similarity.

* `sokal_sneath()` implements the Sokal-Sneath similarity.

MISCELLANEOUS

* `clustomit()` no longer uses stratifed sampling by default. This functionality
  can be employed by settting `stratified = TRUE`. By default, we now use
  nonparametric bootstrapping with the caveat that we first randomly sample one
  observation from each cluster. See the documentation for details.

* With regards to the previous change to `clustomit()`, we have renamed
  `boot_stratified_omit()` to `boot_omit()` and added the optional `stratified`
  argument.

* Simplified the naming of the similarity indices. For example, `jaccard_indep()`
  is now `jaccard()`, and `rand_indep()` is now `rand()`.

* Minor bug fixes in `clustomit()`.

* Cleaned up documentation.

clusteval 0.1
-------------

NEW FEATURES

* First version of the `clusteval` package. With this package, we aim to provide
  tools to evaluate the quality of clusterings and individual clusters obtained
  by applying a clustering algorithm to a data set.

CLUSTER EVALUATION METHODS

* `clustomit()` is an implementation of the ClustOmit statistic, which assesses
  the cluster omission admissibility condition from Fisher and Van Ness (1971)
  to evaluate the stability of a clustering algorithm applied to a data set.
  The sampling distribution of the ClustOmit statistic is approximated with a
  stratifed, nonparametric bootstrapping scheme, which we compute with the
  `mclapply()` function in the `parallel` package.

CLUSTER SIMILARITY

* `cluster_similarity()` computes the similarity between the cluster labels
  determined by two clustering algorithms applied to the same data set.