@@ -18,6 +18,7 @@ export(sim_data)
 export(sim_normal)
 export(sim_student)
 export(sim_unif)
+export(similarity_methods)
 export(sokal_sneath)
 import(Rcpp)
 import(ggplot2)
